<resources>
    <string name="app_name" translatable="false">Quotation Shake</string>
    <string name="randQ">Random quotations</string>
    <string name="getQ">Get quotations</string>
    <string name="favQ">Favorite quotations</string>
    <string name="settings">Settings</string>
    <string name="info">About</string>
    <string name="dev_pic_tag">Developer\'s Picture</string>
    <string name="des_pic_tag">Designer\'s Picture</string>
    <string name="message">Los botones funcionan</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="tagInfo">\nQuotation Shake by \n\nErmes Liriano\nEmmanuel Capellán\n\n\ermes_jr@hotmail.com\nmadboy.sr@gmail.com\n\n®UPV 2023</string>
    <string name="username">Name that identifies the user</string>
    <string name="insert_name">Insert your name</string>
    <string name="quotes_sel_lang">Quotations will be received in the selected language</string>
    <string name="web_requests">Web requests will be performed using the selected HTTP method</string>
    <string name="get">GET</string>
    <string name="post">POST</string>
    <string name="author_info">Author info</string>
    <string name="hello_user">Hello %1s!\nPress Refresh to get a new quotation</string>
    <string name="quotation">This is a sample quotation</string>
    <string name="author">This is a sample author</string>
    <string name="refresh_button">Press to refresh</string>
    <string name="default_name">Nameless One</string>

</resources>