<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/username"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_insert_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/insert_name"
        android:textSize="24sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_username"
        android:inputType="text"
        android:autofillHints="username" />

    <TextView
        android:id="@+id/tv_quotes_sel_lang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/quotes_sel_lang"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/et_insert_name" />

        <Spinner
            android:id="@+id/spinner_languages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:entries="@array/languages"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_quotes_sel_lang"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
        android:id="@+id/tv_web_requests"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/web_requests"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/spinner_languages" />

    <RadioGroup
        android:id="@+id/rg_http_methods"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_web_requests">

        <RadioButton
            android:id="@+id/rb_get"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/rb_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post" />
    </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>